Added metadata field to ManagedAnswer
Metadata in string form can be added to a ManagedAnswer now.
It doesn't enforce key-value mapping, so it's up to the user
to make sure they're writing proper mappings.
